Bug fix: Can't set custom toolbar icon if image file is too big
(issue #38)

--- a/wx-src/pages/options.css
+++ b/wx-src/pages/options.css
@@ -185,13 +185,15 @@ fieldset select.browser-style {
     display: none;
 }
 
-#toolbar-button-icon label > img {
+#toolbar-button-icon label > img,
+#toolbar-button-icon label > canvas {
     padding: 4px;
     width: 36px;
     height: 36px;
 }
 
-#toolbar-button-icon input[type="radio"]:checked + label img {
+#toolbar-button-icon input[type="radio"]:checked + label img,
+#toolbar-button-icon input[type="radio"]:checked + label canvas {
     background-color: highlight;
 }
 
